--- a/project.html
+++ b/project.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>This is the start of something beautiful</h1>
+    <h1>Please just work</h1>
 </body>
 </html>
