--- a/project.html
+++ b/project.html
@@ -6,65 +6,101 @@
     <title>Form Validation</title>
     <link rel="stylesheet" href="project.css">
     <script defer src="project.js"></script>
+    <script src="https://kit.fontawesome.com/27b74e7d77.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div id="bluebar"></div>
     <div class="container">
+        <div id="bluebar"></div>
         <form id="form" action="/">
-            <h1>Basic Details</h1>
-    <section class="main-section">
+            <h2>Basic Details</h2>
+    <section id="main-section">
         <section class="section-control">
             <div class="input-control">
-                <label for="firstname">First Name</label>
-                <input id="firstname" name="firstname" type="text" placeholder="First Name">
-                <small class="error"></small>
-                <label for="lastname">Last Name</label>
-                <input id="lastname" name="lastname" type="text" placeholder="Last Name">
-                <small class="error"></small>
+                <div id="firstName">
+                    <label for="firstname">First Name</label><br>
+                    <input id="firstname" name="firstname" type="text" placeholder="First Name">
+                    <i class="fas fa-check"></i>
+                    <i class="fas fa-exclamation"></i><br>
+                    <div id= "fnameError" class="error"></div>
+                </div>
+                <div id="lastName">
+                    <label for="lastname">Last Name</label><br>
+                    <input id="lastname" name="lastname" type="text" placeholder="Last Name">
+                    <i class="fas fa-check"></i>
+                    <i class="fas fa-exclamation"></i><br>
+                    <div id="lnameError" class="error"></div>
+                </div>
             </div>
             <div class="input-control">
-                <label for="email">Email ID</label>
-                <input id="email" name="email" type="text" placeholder="Email ID">
-                <small class="error"></small>
-                <label for="userID">Your User ID</label>
-                <input id="userID" name="userID" type="text" placeholder="User ID">
-                <small class="error"></small>
+                <div id="eMail">
+                    <label for="email">Email ID</label><br>
+                    <input id="email" name="email" type="text" placeholder="Email ID">
+                    <i class="fas fa-check"></i>
+                    <i class="fas fa-exclamation"></i><br>
+                    <div id="emailError" class="error"></div>
+                </div>
+                <div id="userid">
+                    <label for="userID">Your User ID</label><br>
+                    <input id="userID" name="userID" type="text" placeholder="User ID">
+                    <i class="fas fa-check"></i>
+                    <i class="fas fa-exclamation"></i><br>
+                    <div id="userIDError" class="error"></div>
+                </div>
             </div>
             <div class="input-control">
-                <label for="country">Country</label>
-                <select id="country">
-                    <option value="" disabled selected hidden></option>
-                    <option value="option1">South-Africa</option>
-                    <option value="option2">USA</option>
-                    <option value="option3">Canada</option>
-                </select>
-              <label for="state">State</label>
-              <select id="state">
-                  <option value="" disabled selected hidden></option>
-                  <option value="option1">Western Cape</option>
-                    <option value="option2">California</option>
-                  <option value="option3">Alberta</option>
-                </select>
-                <label for="city">City</label>
-                <select id="city">
-                    <option value="" disabled selected hidden></option>
-                    <option value="option1">Cape Town</option>
-                    <option value="option2">Los Angeles</option>
-                    <option value="option3">Calgary</option>
-              </select>
-              <small class="error"></small>
+                <div id="countries">
+                    <label for="country">Country</label><br>
+                    <select id="country">
+                        <option value="" disabled selected hidden></option>
+                        <option value="option1">South-Africa</option>
+                        <option value="option2">USA</option>
+                        <option value="option3">Canada</option>
+                    </select>
+                    <div id="countryError" class="error"></div>
+                </div>
+                <div id="states">
+                    <label for="state">State</label><br>
+                    <select id="state">
+                        <option value="" disabled selected hidden></option>
+                        <option value="option1">Western Cape</option>
+                        <option value="option2">California</option>
+                        <option value="option3">Alberta</option>
+                    </select>
+                    <div id="stateError" class="error"></div>
+                </div>
+                <div id="cities">
+                    <label for="city">City</label><br>
+                    <select id="city">
+                        <option value="" disabled selected hidden></option>
+                        <option value="option1">Cape Town</option>
+                        <option value="option2">Los Angeles</option>
+                        <option value="option3">Calgary</option>
+                    </select>
+                    <div id="cityError" class="error"></div>
+                </div>
             </div>
             <div class="input-control">
-                <label for="phone">Phone Number</label>
-                <input id="phone" name="phone" type="text" placeholder="Phone Number">
-                <label for="refcode">Reference Code</label>
-                <input id="refcode" name="refcode" type="text" placeholder="Reference Code">
-                <small class="error"></small>
+                <div id="number">
+                    <label for="phone">Phone Number</label><br>
+                    <input id="phone" name="phone" type="text" placeholder="Phone Number">
+                    <i class="fas fa-check"></i>
+                    <i class="fas fa-exclamation"></i><br>
+                    <div id="phoneError" class="error"></div>
+                </div>
+                <div id="reference">
+                    <label for="refcode">Reference Code</label><br>
+                    <input id="refcode" name="refcode" type="text" placeholder="Reference Code">
+                    <i class="fas fa-check"></i>
+                    <i class="fas fa-exclamation"></i><br>
+                    <div id="refcodeError" class="error"></div>
+                </div>
             </div>
         </section>
+    </section>
+    <div id="buttons">
         <button id="reset" type="reset">Reset All</button>
         <button id="submit" type="submit">Continue</button>
-    </section>
+    </div>
         </form>
     </div>
 </body>
