--- a/valid.html
+++ b/valid.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Valid</title>
+    <script defer src="project.js"></script>
 </head>
 <body>
-    
+    <div>
+        
+    </div>
 </body>
 </html>
