--- a/valid.html
+++ b/valid.html
@@ -6,9 +6,16 @@
     <title>Valid</title>
     <script defer src="project.js"></script>
 </head>
-<body>
-    <div>
-        
+<body id="valid">
+    <div id="display">
+        <h3 id="fullname">Fullname: </h3>
+        <h3 id="email">E-Mail: </h3>
+        <h3 id="userid">User ID: </h3>
+        <h3 id="country">Country: </h3>
+        <h3 id="state">State: </h3>
+        <h3 id="city">City: </h3>
+        <h3 id="phone">Phone Number: </h3>
+        <h3 id="reference">Reference Code: </h3>
     </div>
 </body>
 </html>
