--- a/valid.html
+++ b/valid.html
@@ -5,17 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Valid</title>
     <script defer src="project.js"></script>
+    <link rel="stylesheet" href="valid.css">
 </head>
 <body id="valid">
     <div id="display">
-        <h3 id="fullname">Fullname: </h3>
-        <h3 id="email">E-Mail: </h3>
-        <h3 id="userid">User ID: </h3>
-        <h3 id="country">Country: </h3>
-        <h3 id="state">State: </h3>
-        <h3 id="city">City: </h3>
-        <h3 id="phone">Phone Number: </h3>
-        <h3 id="reference">Reference Code: </h3>
+        <h3>Fullname: </h3>
+        <p id="pfullname"></p>
+        <h3>E-Mail: </h3>
+        <p id="pemail"></p>
+        <h3">User ID: </h3>
+        <p id="puserid"></p>
+        <h3">Country: </h3>
+        <p id="pcountry"></p>
+        <h3">State: </h3>
+        <p id="pstate"></p>
+        <h3>City: </h3>
+        <p id="pcity"></p>
+        <h3">Phone Number: </h3>
+        <p id="pphone"></p>
+        <h3">Reference Code: </h3>
+        <p id="preference"></p>
     </div>
 </body>
 </html>
